--- a/requirements_dev.txt
+++ b/requirements_dev.txt
@@ -12,3 +12,10 @@ mkdocs <= 1.5.3
 mkdocs-material <= 9.4.6
 mkdocstrings <= 0.23.0
 mkdocstrings[python]>=0.18
+
+click==8.1.7
+matplotlib==3.8.2
+opencv_python==4.9.0.80
+scikit_learn==1.3.2
+torch==2.1.2
+torchvision==0.16.2
