--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 click==8.1.7
+hydra-core==1.3.2
 matplotlib==3.8.2
-opencv_python==4.9.0.80
+omegaconf==2.3.0
 scikit_learn==1.3.2
 torch==2.1.2
 torchvision==0.16.2
