--- a/environment.yaml
+++ b/environment.yaml
@@ -1,27 +1,23 @@
 # This file may be used to create an environment using:
 # $ conda create --name <env> --file <this file>
-# platform: win-64
-adlfs=2023.12.0=pypi_0
+# platform: linux-64
+_libgcc_mutex=0.1=conda_forge
+_openmp_mutex=4.5=2_gnu
+absl-py=2.0.0=pypi_0
 aiohttp=3.9.1=pypi_0
 aiohttp-retry=2.8.3=pypi_0
 aiosignal=1.3.1=pypi_0
 amqp=5.2.0=pypi_0
 annotated-types=0.6.0=pypi_0
 antlr4-python3-runtime=4.9.3=pypi_0
-anyio=4.2.0=pypi_0
 appdirs=1.4.4=pypi_0
-argcomplete=3.2.1=pypi_0
 asttokens=2.4.1=pyhd8ed1ab_0
 asyncssh=2.14.2=pypi_0
 atpublic=4.0=pypi_0
 attrs=23.2.0=pypi_0
-azure-core=1.29.6=pypi_0
-azure-datalake-store=0.0.53=pypi_0
-azure-identity=1.15.0=pypi_0
-azure-storage-blob=12.19.0=pypi_0
 billiard=4.2.0=pypi_0
-bzip2=1.0.8=he774522_0
-ca-certificates=2023.11.17=h56e8100_0
+bzip2=1.0.8=h7b6447c_0
+ca-certificates=2023.12.12=h06a4308_0
 cachetools=5.3.2=pypi_0
 celery=5.3.6=pypi_0
 certifi=2023.11.17=pypi_0
@@ -31,31 +27,31 @@ click=8.1.7=pypi_0
 click-didyoumean=0.3.0=pypi_0
 click-plugins=1.1.1=pypi_0
 click-repl=0.3.0=pypi_0
-colorama=0.4.6=pyhd8ed1ab_0
+colorama=0.4.6=pypi_0
 comm=0.2.1=pyhd8ed1ab_0
 configobj=5.0.8=pypi_0
 contourpy=1.2.0=pypi_0
+coverage=7.4.0=pypi_0
 cryptography=41.0.7=pypi_0
 cycler=0.12.1=pypi_0
-debugpy=1.6.7=py311hd77b12b_0
+debugpy=1.6.7=py311h6a678d5_0
 decorator=5.1.1=pyhd8ed1ab_0
 dictdiffer=0.9.0=pypi_0
 diskcache=5.6.3=pypi_0
 distro=1.9.0=pypi_0
-docopt=0.6.2=pypi_0
+docker-pycreds=0.4.0=pypi_0
 dpath=2.1.6=pypi_0
 dulwich=0.21.7=pypi_0
 dvc=3.38.1=pypi_0
-dvc-azure=3.0.1=pypi_0
 dvc-data=3.7.0=pypi_0
 dvc-gdrive=3.0.1=pypi_0
 dvc-http=2.32.0=pypi_0
-dvc-objects=3.0.5=pypi_0
+dvc-objects=3.0.6=pypi_0
 dvc-render=1.0.0=pypi_0
 dvc-studio-client=0.18.0=pypi_0
 dvc-task=0.3.0=pypi_0
 entrypoints=0.4=pypi_0
-exceptiongroup=1.2.0=pyhd8ed1ab_0
+exceptiongroup=1.2.0=pyhd8ed1ab_2
 executing=2.0.1=pyhd8ed1ab_0
 filelock=3.13.1=pypi_0
 flatten-dict=0.4.2=pypi_0
@@ -65,63 +61,87 @@ frozenlist=1.4.1=pypi_0
 fsspec=2023.12.2=pypi_0
 funcy=2.0=pypi_0
 gitdb=4.0.11=pypi_0
-gitpython=3.1.40=pypi_0
+gitpython=3.1.41=pypi_0
 google-api-core=2.15.0=pypi_0
-google-api-python-client=2.113.0=pypi_0
+google-api-python-client=2.114.0=pypi_0
 google-auth=2.26.1=pypi_0
 google-auth-httplib2=0.2.0=pypi_0
+google-auth-oauthlib=1.2.0=pypi_0
 googleapis-common-protos=1.62.0=pypi_0
 grandalf=0.8=pypi_0
-gto=1.6.1=pypi_0
+grpcio=1.60.0=pypi_0
+gto=1.6.2=pypi_0
 httplib2=0.22.0=pypi_0
 hydra-core=1.3.2=pypi_0
 idna=3.6=pypi_0
 importlib-metadata=7.0.1=pyha770c72_0
 importlib_metadata=7.0.1=hd8ed1ab_0
-ipykernel=6.28.0=pyha63f2e9_0
-ipython=8.20.0=pyh7428d3b_0
-isodate=0.6.1=pypi_0
+iniconfig=2.0.0=pypi_0
+ipykernel=6.28.0=pyhd33586a_0
+ipython=8.20.0=pyh707e725_0
 iterative-telemetry=0.0.8=pypi_0
 jedi=0.19.1=pyhd8ed1ab_0
 jinja2=3.1.2=pypi_0
-jmespath=1.0.1=pypi_0
 joblib=1.3.2=pypi_0
 jupyter_client=8.6.0=pyhd8ed1ab_0
-jupyter_core=5.7.1=py311h1ea47a8_0
+jupyter_core=5.7.1=py311h38be061_0
 kiwisolver=1.4.5=pypi_0
-knack=0.11.0=pypi_0
 kombu=5.3.4=pypi_0
-libffi=3.4.4=hd77b12b_0
-libsodium=1.0.18=h8d14728_1
+ld_impl_linux-64=2.38=h1181459_1
+libffi=3.4.4=h6a678d5_0
+libgcc-ng=13.2.0=h807b86a_3
+libgomp=13.2.0=h807b86a_3
+libsodium=1.0.18=h36c2ea0_1
+libstdcxx-ng=11.2.0=h1234567_1
+libuuid=1.41.5=h5eee18b_0
+lightning=2.1.3=pypi_0
+lightning-utilities=0.10.0=pypi_0
+markdown=3.5.2=pypi_0
 markdown-it-py=3.0.0=pypi_0
 markupsafe=2.1.3=pypi_0
 matplotlib=3.8.2=pypi_0
 matplotlib-inline=0.1.6=pyhd8ed1ab_0
 mdurl=0.1.2=pypi_0
 mpmath=1.3.0=pypi_0
-msal=1.26.0=pypi_0
-msal-extensions=1.1.0=pypi_0
 multidict=6.0.4=pypi_0
+ncurses=6.4=h6a678d5_0
 nest-asyncio=1.5.8=pyhd8ed1ab_0
 networkx=3.2.1=pypi_0
 numpy=1.26.3=pypi_0
+nvidia-cublas-cu12=12.1.3.1=pypi_0
+nvidia-cuda-cupti-cu12=12.1.105=pypi_0
+nvidia-cuda-nvrtc-cu12=12.1.105=pypi_0
+nvidia-cuda-runtime-cu12=12.1.105=pypi_0
+nvidia-cudnn-cu12=8.9.2.26=pypi_0
+nvidia-cufft-cu12=11.0.2.54=pypi_0
+nvidia-curand-cu12=10.3.2.106=pypi_0
+nvidia-cusolver-cu12=11.4.5.107=pypi_0
+nvidia-cusparse-cu12=12.1.0.106=pypi_0
+nvidia-nccl-cu12=2.18.1=pypi_0
+nvidia-nvjitlink-cu12=12.3.101=pypi_0
+nvidia-nvtx-cu12=12.1.105=pypi_0
 oauth2client=4.1.3=pypi_0
+oauthlib=3.2.2=pypi_0
 omegaconf=2.3.0=pypi_0
+onnx=1.15.0=pypi_0
 opencv-python=4.9.0.80=pypi_0
-openssl=3.0.12=h2bbff1b_0
+openssl=3.2.0=hd590300_1
 orjson=3.9.10=pypi_0
 packaging=23.2=pyhd8ed1ab_0
+pandas=2.1.4=pypi_0
 parso=0.8.3=pyhd8ed1ab_0
 pathspec=0.12.1=pypi_0
+pexpect=4.8.0=pyh1a96a4e_2
 pickleshare=0.7.5=py_1003
 pillow=10.2.0=pypi_0
-pip=23.3.1=py311haa95532_0
-pipreqs=0.4.13=pypi_0
+pip=23.3.1=py311h06a4308_0
 platformdirs=3.11.0=pypi_0
-portalocker=2.8.2=pypi_0
-prompt-toolkit=3.0.42=pyha770c72_0
-protobuf=4.25.1=pypi_0
-psutil=5.9.0=py311h2bbff1b_0
+pluggy=1.3.0=pypi_0
+probeai=1.1.0=pypi_0
+prompt-toolkit=3.0.43=pypi_0
+protobuf=4.23.4=pypi_0
+psutil=5.9.7=py311h459d7ec_0
+ptyprocess=0.7.0=pyhd3deb0d_0
 pure_eval=0.2.2=pyhd8ed1ab_0
 pyasn1=0.5.1=pypi_0
 pyasn1-modules=0.3.0=pypi_0
@@ -133,59 +153,66 @@ pydrive2=1.19.0=pypi_0
 pygit2=1.13.3=pypi_0
 pygments=2.17.2=pyhd8ed1ab_0
 pygtrie=2.5.0=pypi_0
-pyjwt=2.8.0=pypi_0
 pyopenssl=23.3.0=pypi_0
 pyparsing=3.1.1=pypi_0
-python=3.11.7=he1021f5_0
+pytest=7.4.4=pypi_0
+python=3.11.7=h955ad1f_0
 python-dateutil=2.8.2=pyhd8ed1ab_0
 python_abi=3.11=2_cp311
-pywin32=305=py311h2bbff1b_0
+pytorch-lightning=2.1.3=pypi_0
+pytz=2023.3.post1=pypi_0
 pyyaml=6.0.1=pypi_0
-pyzmq=25.1.0=py311hd77b12b_0
+pyzmq=25.1.0=py311h6a678d5_0
+readline=8.2=h5eee18b_0
 requests=2.31.0=pypi_0
+requests-oauthlib=1.3.1=pypi_0
 rich=13.7.0=pypi_0
 rsa=4.9=pypi_0
 ruamel-yaml=0.18.5=pypi_0
 ruamel-yaml-clib=0.2.8=pypi_0
-ruff=0.1.11=pypi_0
 scikit-learn=1.3.2=pypi_0
 scipy=1.11.4=pypi_0
 scmrepo=2.0.2=pypi_0
 semver=3.0.2=pypi_0
-setuptools=68.2.2=py311haa95532_0
+sentry-sdk=1.39.2=pypi_0
+setproctitle=1.3.3=pypi_0
+setuptools=68.2.2=py311h06a4308_0
 shortuuid=1.0.11=pypi_0
 shtab=1.6.5=pypi_0
 six=1.16.0=pyh6c4a22f_0
 smmap=5.0.1=pypi_0
-sniffio=1.3.0=pypi_0
-sqlite=3.41.2=h2bbff1b_0
+sqlite=3.41.2=h5eee18b_0
 sqltrie=0.11.0=pypi_0
 stack_data=0.6.2=pyhd8ed1ab_0
 sympy=1.12=pypi_0
 tabulate=0.9.0=pypi_0
+tensorboard=2.15.1=pypi_0
+tensorboard-data-server=0.7.2=pypi_0
 threadpoolctl=3.2.0=pypi_0
-tk=8.6.12=h2bbff1b_0
+tk=8.6.12=h1ccaba5_0
 tomlkit=0.12.3=pypi_0
 torch=2.1.2=pypi_0
+torch-tb-profiler=0.4.3=pypi_0
+torchmetrics=1.3.0=pypi_0
 torchvision=0.16.2=pypi_0
-tornado=6.3.3=py311h2bbff1b_0
+tornado=6.3.3=py311h459d7ec_1
 tqdm=4.66.1=pypi_0
 traitlets=5.14.1=pyhd8ed1ab_0
+triton=2.1.0=pypi_0
 typer=0.9.0=pypi_0
 typing_extensions=4.9.0=pyha770c72_0
 tzdata=2023.4=pypi_0
 uritemplate=4.1.1=pypi_0
 urllib3=2.1.0=pypi_0
-vc=14.2=h21ff451_1
 vine=5.1.0=pypi_0
 voluptuous=0.14.1=pypi_0
-vs2015_runtime=14.27.29016=h5e58377_2
+wandb=0.16.2=pypi_0
 wcwidth=0.2.13=pyhd8ed1ab_0
-wheel=0.41.2=py311haa95532_0
-xz=5.4.5=h8cc25b3_0
-yarg=0.1.9=pypi_0
+werkzeug=3.0.1=pypi_0
+wheel=0.41.2=py311h06a4308_0
+xz=5.4.5=h5eee18b_0
 yarl=1.9.4=pypi_0
 zc-lockfile=3.0.post1=pypi_0
-zeromq=4.3.4=h0e60522_1
+zeromq=4.3.4=h9c3ff4c_1
 zipp=3.17.0=pyhd8ed1ab_0
-zlib=1.2.13=h8cc25b3_0
+zlib=1.2.13=h5eee18b_0
