--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,9 +5,9 @@ build-backend = "setuptools.build_meta"
 [project]
 name = "probeai"
 version = "1.1.0"
-description = "A short description of the project."
+description = "A tool for training a neural network for probe mark classification."
 authors = [
-  { name = "Ferenc Fodor (imec and DTU)", email = "your@email.com" },
+  { name = "Ferenc Fodor (imec and DTU)", email = "s220356@email.com" },
 ]
 license = { file = "LICENSE" }
 readme = "README.md"
