--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -9,8 +9,8 @@ jobs:
         runs-on: ubuntu-latest
 
         steps:
-        - uses: actions/checkout@v2
         - name: Build the Docker image
+        uses: actions/checkout@v2
         run: |
             echo "${{ secrets.DOCKER_HUB_TOKEN }}" | docker login \
                 -u "${{ secrets.DOCKER_HUB_USERNAME }}" --password-stdin docker.io
