--- a/.github/workflows/cml.yaml
+++ b/.github/workflows/cml.yaml
@@ -1,21 +1,25 @@
-name: train-my-model
+name: model-training
 on: [push]
 jobs:
   run:
-    runs-on: [ubuntu-latest]
+    runs-on: ubuntu-latest
+    container: ghcr.io/iterative/cml:0-dvc2-base1
     steps:
-      - uses: actions/checkout@v2
-      - uses: iterative/setup-cml@v1
+      - uses: actions/checkout@v3
       - name: Train model
-        run: |
-          pip install -r requirements.txt  # install dependencies
-          python train.py  # run training
-      - name: Write report
         env:
-          # this authenticates that the right permissions are in place
           REPO_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          GOOGLE_APPLICATION_CREDENTIALS: ${{ secrets.GOOGLE_APPLICATION_CREDENTIALS }}
         run: |
-          # send all information to report.md that will be reported to us when the workflow finish
-          cat classification_report.txt >> report.md
-          cml-publish confusion_matrix.png --md >> report.md
-          cml-send-comment report.md
+          # Install requirements
+          pip install -r requirements.txt
+
+          # Pull data & run-cache from S3 and reproduce pipeline
+          dvc pull data --run-cache
+          dvc repro
+
+          python probeai/train.py
+
+          cat ./reports/classification_report.txt >> report.md
+          echo "![](./reports/figures/confusion_matrix.png)" >> report.md
+          cml comment create report.md
