--- a/.github/workflows/cml.yaml
+++ b/.github/workflows/cml.yaml
@@ -1,7 +1,5 @@
-name: ML Prediction Workflow
-
+name: model-training
 on: [push]
-
 jobs:
   run-prediction:
     runs-on: ubuntu-latest
@@ -13,7 +11,7 @@ jobs:
     - name: Authenticate to Google Cloud
       uses: google-github-actions/auth@v1
       with:
-        credentials_json: ${{ secrets.GCP_SA_KEY }}
+        credentials_json: ${{ secrets.GOOGLE_APPLICATION_CREDENTIALS }}
 
     - name: Set up CML
       uses: iterative/setup-cml@v1
@@ -30,11 +28,11 @@ jobs:
       env:
         REPO_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       run: |
-        # Install requirements
-        pip install -r requirements.txt
+          # Install requirements
+          pip install -r requirements.txt
 
-        python probeai/train.py
+          python probeai/train.py
 
-        cat ./reports/classification_report.txt >> report.md
-        echo "![](./reports/figures/confusion_matrix.png)" >> report.md
-        cml comment create report.md
+          cat ./reports/classification_report.txt >> report.md
+          echo "![](./reports/figures/confusion_matrix.png)" >> report.md
+          cml comment create report.md
