--- a/.github/workflows/cml.yaml
+++ b/.github/workflows/cml.yaml
@@ -26,7 +26,7 @@ jobs:
     - name: Get data
       run: dvc pull
       env:
-        GDRIVE_CREDENTIALS_DATA: ${{ secrets.GDRIVE_CREDENTIALS_DATA }}
+        GDRIVE_CREDENTIALS_DATA: ${{ secrets.GDRIVE_CREDENTIALS_DATA2 }}
 
     - name: Run prediction model
       env:
