--- a/.github/workflows/cml.yaml
+++ b/.github/workflows/cml.yaml
@@ -23,7 +23,7 @@ jobs:
         pip install 'dvc[gs]'
 
     - uses: iterative/setup-dvc@v1
-    - name: Get data
+    - name: Get dataa
       run: dvc pull
       env:
         GDRIVE_CREDENTIALS_DATA: ${{ secrets.GDRIVE_CREDENTIALS_DATA }}
