--- a/.github/workflows/cml.yaml
+++ b/.github/workflows/cml.yaml
@@ -24,8 +24,8 @@ jobs:
     # copy the credentials file to the runner
     - name: Copy credentials file
       run: |
-        mkdir -p ./.cache/pydrive2fs/710796635688-iivsgbgsb6uv1fap6635dhvuei09o66c.apps.googleusercontent.com/
-        echo "$GOOGLE_APPLICATION_CREDENTIALS2" > ./.cache/pydrive2fs/710796635688-iivsgbgsb6uv1fap6635dhvuei09o66c.apps.googleusercontent.com/default.json
+        mkdir -p $HOME/.cache/pydrive2fs/710796635688-iivsgbgsb6uv1fap6635dhvuei09o66c.apps.googleusercontent.com/
+        echo "$GOOGLE_APPLICATION_CREDENTIALS2" > $HOME/.cache/pydrive2fs/710796635688-iivsgbgsb6uv1fap6635dhvuei09o66c.apps.googleusercontent.com/default.json
       env:
         GOOGLE_APPLICATION_CREDENTIALS: ${{ secrets.GOOGLE_APPLICATION_CREDENTIALS2 }}
 
